# Cyberforce-submission-V2

./: .gitignore  .pre-commit-config.yaml  ARTIFACT_VIEWER_IMPROVEMENTS.md  BUILD_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  FRONTEND_RESTRUCTURING.md  LICENSE  MCP_FIX_SUMMARY.md  Makefile  QUALITY_NAMING_CHECKLIST.md  QUALITY_NAMING_IMPLEMENTATION.md  QUALITY_NAMING_STATUS.md  README.md  SECURITY.md  UI_VISUAL_GUIDE.md  cli.py  instruct.txt  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  test1.py  test_quality_reports.ps1  verify_ui_build.py
agents/: __init__.py  base.py
backend_api/: __init__.py  main.py  requirements.txt
core/: __init__.py  artifacts.py
docs/: ARCHITECTURE.md  ARTIFACT_SYSTEM.md  QUICK_REFERENCE.md  VERIFICATION_CHECKLIST.md
examples/: arduino_simple_test.json  input_real_world.json  sample_input.json  usecase_motor_controller.json
frontend/: API_REFERENCE.md  JSON_UPLOAD_GUIDE.md  README-FORGE.md  example-config.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
prompts/: architecture_agent_prompt_v1.md  base_prompt.md  build_agent_prompt_v1.md  code_agent_prompt_v1.md  quality_agent_prompt_v1.md  test_agent_prompt_v1.md
rag_docs/: RAG_METADATA.json  README.md  communication_protocols.md  embedded_safety.md  hardware_interfaces.md  interrupt_handling.md  memory_management.md  modbus_RS485.md  ota_firmware_updates.md  power_management.md  sensor_integration.md  state_machines.md  testing_strategies.md
(+93 files in other folders)
